# Full-Stack-Agentic-AI

./: README.md  pyproject.toml
Generators/: Generator_01.py
Prompts/: CoT_prompt.py
RAG/code/: retrival.py
RAG_Queue/: docker-compose.yaml  main.py  run_all_watch.py  server.py
RAG_Queue/Worker/: worker_function.py
RAG_Queue/queue_rag/: queue_rag.py
Theory Concept/: Example.md
Threads/: threads.py
langchain_learn/: conditional.py  intro.py
pydantic/: serialization.py
