[project]
name = "Full_Stack_Agentic_AI"
version = "0.1.0"
Auther = "Muzammil_Rizvi"
description = "learning something new instead of wasting time" 
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "typing>=3.10.0.0",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "pypdf>=6.6.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-google-genai>=4.2.0",
    "langchain-qdrant>=1.1.0",
    "rq>=2.6.1",
    "fastapi[standard]>=0.128.7",
    "watchdog>=6.0.0",
]
